# OoT-Randomizer

./: .gitattributes  .gitignore  .gitmodules  Bingo.py  CHANGELOG.md  CI.py  Cargo.toml  Colors.py  Cosmetics.py  Cutscenes.py  Dungeon.py  DungeonList.py  Entrance.py  EntranceShuffle.py  Fill.py  Goals.py  Gui.py  HintList.py  HintListJP.py  Hints.py  HintsJP.py  IconManip.py  Item.py  ItemList.py  ItemPool.py  JSONDump.py  Location.py  LocationList.py  LocationTransJP.py  MQ.py  Main.py  Messages.py  MessagesJP.py  Models.py  Music.py  N64Patch.py  NewText.py  OcarinaSongs.py  Patches.py  PatchesJP.py  (+26 more)
.github/workflows/: release.yml
ASM/: build.py
ASM/c/: actor.c  actor.h  agony.c  chests.c  debug.c  dpad.c  dpad.h  dungeon_info.c  en_item00.c  en_wonderitem.c  everdrive.c  everdrive.h  file_icons.c  file_select.c  get_items.c  gfx.c  gfx.h  item_draw_functions.c  item_draw_table.c  item_effects.c  item_effects.h  item_table.c  item_table.h  item_upgrades.c  item_upgrades.h  main.c  models.h  obj_kibako2.c  pots.c  save.h  sys_matrix.h  textures.c  textures.h  triforce.c  z64.h
ASM/src/: build.asm  config.asm  hacks.asm  rainbow_bridge.asm
Notes/: Invisible Chest Logic Notes.txt  bin-build.md  silver-rupees.txt
Notes/Chest Textures/: Custom Chest Textures.txt  bombchu.bat
assets/: pre-commit.py  sotm.py
crate/fill-test/: Cargo.toml
crate/ootr-cli/: Cargo.toml
crate/ootr-cli/src/: main.rs
crate/ootr-gui/: Cargo.toml
crate/ootr-gui/src/: main.rs
crate/ootr-python/: Cargo.toml
crate/ootr-python/src/: lib.rs  rom.rs  search.rs
crate/rust-n64-test/: Cargo.toml  build.rs
data/: LogicHelpers.json  presets_default.json  settings_mapping.json
data/Bingo/: bingo_goals.json
data/Glitched World/: Deku Tree MQ.json  Deku Tree.json  Overworld.json  Water Temple MQ.json  Water Temple.json
data/Hints/: bingo.json  fenhl_tootr.json  league.json  mixed_pools.json  scrubs.json  sgl2022.json  triforce_blitz_s3.json
data/World/: Bosses.json  Bottom of the Well MQ.json  Bottom of the Well.json  Deku Tree MQ.json  Deku Tree.json  Dodongos Cavern MQ.json  Dodongos Cavern.json  Fire Temple MQ.json  Fire Temple.json  Forest Temple MQ.json  Forest Temple.json  Ganons Castle MQ.json  Ganons Castle.json  Gerudo Training Ground MQ.json  Gerudo Training Ground.json  Ice Cavern MQ.json  Ice Cavern.json  Jabu Jabus Belly MQ.json  Jabu Jabus Belly.json  Overworld.json  Shadow Temple MQ.json  Shadow Temple.json  Spirit Temple MQ.json  Spirit Temple.json  Water Temple MQ.json  Water Temple.json
src/: entrance_shuffle.rs  hints.rs  lib.rs  main.rs
tests/: disables.sav  entrance.sav  glitched-standard.sav  multiworld.sav  triforce-multiworld.sav
tests/plando/: boss_rush_dc_mq.json  (+64 more)
(+3 files in other folders)
