[workspace]
members = ["crate/*"]
default-members = ["crate/ootr-python"]
resolver = "2"

[workspace.package]
version = "8.1.91-fenhl.1.riir.1"
edition = "2021"

[workspace.lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
lto = true
strip = true
