[package]
name = "ootr-python"
version.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
#unsafe_code = "forbid" # PyO3 generates unsafe code
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[lib]
name = "rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
decompress = { git = "https://github.com/fenhl/OoT_Decompressor", branch = "riir" }
lazy-regex = "3"
pyo3 = { version = "0.22", features = ["anyhow", "auto-initialize", "extension-module"] }
semver = "1"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["pyo3"] }

[build-dependencies]
pyo3-build-config = "0.22"
